manifests/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc
  namespace: monitoring
spec:
  ports:
    - name: metrics
      port: 9090
      targetPort: 9090
  selector:
    app: prometheus
    component: core
